Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demok8s-app
  labels:
    app: demok8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demok8s-app
  template:
    metadata:
      labels:
        app: demok8s-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: demok8s-app
        image: max400/demo-dkrepo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
