Kubernetes/demok8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demok8s-service
  labels:
    app: demok8s-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: demok8s-app
