Kubernetes/demok8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demok8s-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:381492139836:certificate/9f897b74-516f-47ca-84a0-8b751b508ab2
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: devopswithmax.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demok8s-service
                port:
                  number: 80
